update: index.html

--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
 
         <section class="section_team">
             <span class="section_team_span">Наша команда</span>
-            <div class="section_team_box">
+            <div class="section_team_box" id="sectionTeamBox">
                 <div class="section_team_box_card">
                     <img class="section_team_box_card_img" src="image/team1.jpg " alt="produser">
                     <p class="section_team_box_card_name">Ігор Дем'яненко</p> 
                     <p class="section_team_box_card_profesion">Produser designer</p>
                     <nav class="section_team_box_car_nav">
-                        <li><a class="instagram" href="https://www.instagram.com/"></a></li>  
-                        <li><a class="twitter" href="https://twitter.com/"></a></li>
-                        <li><a class="facebook" href="https://www.facebook.com/"></a></li>
-                        <li><a class="linkedin" href="https://www.linkedin.com/"></a></li>
+                        <li><a  href="https://www.instagram.com/"><img class="instagram" src="icons/Ellipse1.png" alt="instagram"></a></li>  
+                        <li><a  href="https://twitter.com/"><img class="twitter" src="icons/Ellipse2.png" alt="twitter"></a></li>
+                        <li><a  href="https://www.facebook.com/"><img class="facebook" src="icons/Ellipse3.png" alt="facebook"></a></li>
+                        <li><a  href="https://www.linkedin.com/"><img class="linkedin" src="icons/Ellipse4.png" alt="linkedin"></a></li>
                     </nav>
                 </div>
                 <div class="section_team_box_card">
@@ -144,10 +144,10 @@
                     <p class="section_team_box_card_name">Ольга Рєпіна</p> 
                     <p class="section_team_box_card_profesion">Frontend developer</p>
                     <nav class="section_team_box_car_nav">
-                        <li><a class="instagram" href="https://www.instagram.com/"></a></li>  
-                        <li><a class="twitter" href="https://twitter.com/"></a></li>
-                        <li><a class="facebook" href="https://www.facebook.com/"></a></li>
-                        <li><a class="linkedin" href="https://www.linkedin.com/"></a></li>
+                        <li><a  href="https://www.instagram.com/"><img class="instagram" src="icons/Ellipse1.png" alt="instagram"></a></li>  
+                        <li><a  href="https://twitter.com/"><img class="twitter" src="icons/Ellipse2.png" alt="twitter"></a></li>
+                        <li><a  href="https://www.facebook.com/"><img class="facebook" src="icons/Ellipse3.png" alt="facebook"></a></li>
+                        <li><a  href="https://www.linkedin.com/"><img class="linkedin" src="icons/Ellipse4.png" alt="linkedin"></a></li>
                     </nav>
                 </div>
                 <div class="section_team_box_card">
@@ -155,10 +155,10 @@
                     <p class="section_team_box_card_name">Микола Тарасов</p> 
                     <p class="section_team_box_card_profesion">Marketing</p>
                     <nav class="section_team_box_car_nav">
-                        <li><a class="instagram" href="https://www.instagram.com/"></a></li>  
-                        <li><a class="twitter" href="https://twitter.com/"></a></li>
-                        <li><a class="facebook" href="https://www.facebook.com/"></a></li>
-                        <li><a class="linkedin" href="https://www.linkedin.com/"></a></li>
+                        <li><a  href="https://www.instagram.com/"><img class="instagram" src="icons/Ellipse1.png" alt="instagram"></a></li>  
+                        <li><a  href="https://twitter.com/"><img class="twitter" src="icons/Ellipse2.png" alt="twitter"></a></li>
+                        <li><a  href="https://www.facebook.com/"><img class="facebook" src="icons/Ellipse3.png" alt="facebook"></a></li>
+                        <li><a  href="https://www.linkedin.com/"><img class="linkedin" src="icons/Ellipse4.png" alt="linkedin"></a></li>
                     </nav>
                 </div>
                 <div class="section_team_box_card">
@@ -166,10 +166,10 @@
                     <p class="section_team_box_card_name">Михайло Єрмаков</p> 
                     <p class="section_team_box_card_profesion">UI designer</p>
                     <nav class="section_team_box_car_nav">
-                        <li><a class="instagram" href="https://www.instagram.com/"></a></li>  
-                        <li><a class="twitter" href="https://twitter.com/"></a></li>
-                        <li><a class="facebook" href="https://www.facebook.com/"></a></li>
-                        <li><a class="linkedin" href="https://www.linkedin.com/"></a></li>
+                        <li><a  href="https://www.instagram.com/"><img class="instagram" src="icons/Ellipse1.png" alt="instagram"></a></li>  
+                        <li><a  href="https://twitter.com/"><img class="twitter" src="icons/Ellipse2.png" alt="twitter"></a></li>
+                        <li><a  href="https://www.facebook.com/"><img class="facebook" src="icons/Ellipse3.png" alt="facebook"></a></li>
+                        <li><a  href="https://www.linkedin.com/"><img class="linkedin" src="icons/Ellipse4.png" alt="linkedin"></a></li>
                     </nav>
                 </div>
             </div>
@@ -179,12 +179,12 @@
             <span>Постійні клієнти</span>
             <div class="section_customers_box">
                 <nav class="section_customers_box_customer">
-                    <li><a class="first_custome" href=""></a></li> 
-                    <li><a class="second_custome" href=""></a></li>
-                    <li><a class="third_custome" href=""></a></li>
-                    <li><a class="fourth_custome" href=""></a></li>
-                    <li><a  class="fifth_custome" href=""></a></li>
-                    <li><a class="sixth_custome" href=""></a></li>
+                    <li><a class="first_custome" id="firstCustome" href=""><img src="icons/Logo1.png" alt=""></a></li> 
+                    <li><a class="second_custome" id="secondCustome" href=""><img src="icons/Logo2.png" alt=""></a></li>
+                    <li><a class="third_custome" id="thirdCustome" href=""><img src="icons/Logo3.png" alt=""></a></li>
+                    <li><a class="fourth_custome" id="fourthCustome" href=""><img src="icons/Logo4.png" alt=""></a></li>
+                    <li><a  class="fifth_custome" id="fifthCustome" href=""><img src="icons/Logo5.png" alt=""></a></li>
+                    <li><a class="sixth_custome" id="sixthCustome" href=""><img src="icons/Logo6.png" alt=""></a></li>
                 </nav>
             </div>  
         </section>
