--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h1><a href="#"><span class="header_logo_h1_span">Web</span>Studio</a></h1>
                 </div>
                 <nav class="header_menu_nav" id="menu_nav">
-                    <a id="studio" href="#">Студія</a>
+                    <a id="studio" href="https://vovikok.github.io/jss-2022-hw-01/index.html">Студія</a>
                     <a id="portfolio" href="porfolio.html">Портфоліо</a>
                     <a href="">Контакти</a>
                 </nav>
