--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <section class="form_section" id="formSection" >
                     <label for="name">Ім'я</label>
                     <input type="text" id="inputName" name="name">
-                    <img id="inputImg" class="form_name" src="icons/person-black-18dp1.png" width="18px" height="18px" alt="name">
+                    <img id="inputImg" class="form_name" src="icons/person-black-18dp 1.png" width="18px" height="18px" alt="name">
 
                     <label for="phone">Телефон</label>
                     <input id="inputPhone" type="text" name="phone">
