--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </footer> 
 
         <div id="modalWindow"></div>
-        <form action="" id="top_form" method="post">
+        <form action="#" id="top_form" method="post">
             <fieldset>
                 <button id="modal_button" class="modal_button">
                     <img id="modal_img" class="modal_button_close" src="icons/close-black-18dp (1) 1.png" width="18px" height="18px" alt="mail">
