--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <ul class="burger_box" id="burgerBox">
                     <nav class="burger_menu_nav" id="menu_nav">
                         <a id="studio" href="#">Студія</a>
-                        <a id="portfolio" href="portfolio/porfolio.html">Портфоліо</a>
+                        <a id="portfolio" href="porfolio.html">Портфоліо</a>
                         <a href="">Контакти</a>
                     </nav>
                     <nav class="burger_contacs_nav">
